2007-07-26  Eitan Isaacson  <eitan@ascender.com>

	* Initial import into temporary home in accerciser on gnome.org's SVN.