@@ -1,3 +1,7 @@
 2007-07-26  Eitan Isaacson  <eitan@ascender.com>
 
+	* po/Makefile.in.in: Removed. This is autogenerated.
+	
+2007-07-26  Eitan Isaacson  <eitan@ascender.com>
+
 	* Initial import into temporary home in accerciser on gnome.org's SVN.
